tests/baselines/reference/ES5SymbolProperty6.errors.txt
tests/cases/conformance/Symbols/ES5SymbolProperty6.ts(2,6): error TS2552: Cannot find name 'Symbol'. Did you mean 'JSON'?
tests/cases/conformance/Symbols/ES5SymbolProperty6.ts(5,9): error TS2552: Cannot find name 'Symbol'. Did you mean 'JSON'?


==== tests/cases/conformance/Symbols/ES5SymbolProperty6.ts (2 errors) ====
    class C {
        [Symbol.iterator]() { }
         ~~~~~~
!!! error TS2552: Cannot find name 'Symbol'. Did you mean 'JSON'?
    }
    
    (new C)[Symbol.iterator]
            ~~~~~~
!!! error TS2552: Cannot find name 'Symbol'. Did you mean 'JSON'?